namespace Job.Contract;

public class JobResultResponse
{
}
