@startuml Job.WebApi.Client classes
hide empty members

class Exception << Built-In >>
interface IDisposable << Built-In >>
interface ILogger << Serilog >>
interface IFlurlClient << Flurl >>
class Pkcs12CertificateOptions << External >>
class JobResultResponse << External >>
class CreateJobRequest << External >>

class JobWebApiClientOptions
{
    +string Url
    +TimeSpan Timeout
}
Pkcs12CertificateOptions <|-- JobWebApiClientOptions

interface IFlurlClientFactory
{
    +IFlurlClient Create(JobWebApiClientOptions)
}
IFlurlClientFactory --> IFlurlClient

class FlurlClientFactory
IFlurlClientFactory <|.. FlurlClientFactory

exception JobWebApiException
{
    {method}+HttpStatusCode? StatusCode
}
Exception <|-- JobWebApiException

exception JobWebApiTimeoutException
Exception <|-- JobWebApiTimeoutException

interface IJobWebApiClient
{
    +Task<Guid> CreateNewJobAsync(CreateJobRequest, CancellationToken)
    +Task<JobResultResponse> GetJobResultsAsync(Guid, CancellationToken)
}
IDisposable <|.. IJobWebApiClient
IJobWebApiClient --> CreateJobRequest
IJobWebApiClient --> JobResultResponse

class JobWebApiClient
{
    -IFlurlClient _httpClient
}
IJobWebApiClient <|.. JobWebApiClient
JobWebApiClient --> IFlurlClientFactory
JobWebApiClient --> JobWebApiClientOptions
JobWebApiClient --> ILogger
JobWebApiClient --> JobWebApiException
JobWebApiClient --> JobWebApiTimeoutException
JobWebApiClient --> IFlurlClient

@enduml
